--- a/index.html
+++ b/index.html
@@ -3,13 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./assets/css/style.css"/>
+
     <title>Run Buddy</title>
 </head>
 <body>
        <!--navigation -->   
     <header>  
          <h1>
-            <a href="/">RUN BUDDY</a>
+            RUN BUDDY
+           <!-- <a href="/">RUN BUDDY</a>--> 
         </h1>
         <nav>
              <!--Unordered list element-->
@@ -19,13 +22,13 @@
                     <a href="#what-we-do">What We Do</a>
                 </li>
                 <li>
-                    <a href="#what-yo-do">Whay You Do</a>    
+                    <a href="#what-you-do">What You Do</a>    
                 </li>
                 <li>
-                    <a href="#your trainers">Your Trainers</a>
+                    <a href="#your-trainers">Your Trainers</a>
                 </li>
                 <li>
-                    <a href="#reach out">Reach Out</a>
+                    <a href="#reach-out">Reach Out</a>
                 </li>
             </ul>
         </nav>
