header style completed

--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
        <!--navigation -->   
     <header>  
          <h1>
-            RUN BUDDY
-           <!-- <a href="/">RUN BUDDY</a>--> 
+           <a href="/">RUN BUDDY</a>
         </h1>
         <nav>
              <!--Unordered list element-->
