--- a/index.html
+++ b/index.html
@@ -115,7 +115,6 @@
             </div>
           </article>
           <!-- second trainer bio -->
-
           <article class="trainer">
             <div class="trainer-bio text-right">
               <h3>Joanna Gill</h3>
@@ -128,7 +127,6 @@
             <img src="./assets/images/trainer-2.jpg" alt="Joanna Gill cooling off after a workout" />
           </article>
           <!-- third trainer bio -->
-
           <article class="trainer">
             <img src="./assets/images/trainer-3.jpg" alt="Harry Smith wearing a headband and lifting comically small pink weights" />
             <div class="trainer-bio text-left">
@@ -142,12 +140,32 @@
           </article>
     </section>
   
-      <!-- "reach out" section-->
-     <section id="reach-out">
-         <h2>Reach Out</h2>
-        
+      <!-- "reach out " section-->
+     <section id="reach-out" class="contact">
+        <h2 class="section-title secondary-border">Reach Out</h2> 
+        <div class="contact-info"> 
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3465.2410685102695!2d-95.54540878556529!3d29.712775541120326!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8640c2ddcccd38f9%3A0x832e1d4e507f4c33!2s9001%20Town%20Park%20Dr%2C%20Houston%2C%20TX%2077036!5e0!3m2!1ses-419!2sus!4v1589949474884!5m2!1ses-419!2sus"
+              frameborder="0" style="border:0;"
+              allowfullscreen="" >
+            </iframe>"
+           <div>
+            <h3>Run Buddy</h3>
+            <p>
+              Any questions or concerns before signing up?
+              <br />
+              Let us know and we'll be happy to talk to you!
+            </p>
+            <address>
+                55 Main Street <br/>
+                Some Town, Ca <br/>
+                12345<br />
+                P: 555.RUN.BUDZ (555.786.2839)<br/>
+                E: <a href="mailto:info@runbuddy.io">info@runbuddy.io</a>
+              </address>
+            </div>
+          </div>               
      </section> 
-
+ 
      <!-- footer-->
      <footer> 
         <h2>❤️ Made with love by Run Buddy.</h2>
