--- a/index.html
+++ b/index.html
@@ -29,6 +29,10 @@
                 <li>
                     <a href="#reach-out">Reach Out</a>
                 </li>
+                <li>
+                  <a href="#services-plans">Services Plans</a>
+
+                </li>
             </ul>
         </nav>
     </header>
@@ -181,7 +185,17 @@
           </article>
       </div>  
     </section>
-  
+     <section id="services-plans" class="services">
+       <div class="service-grid-container">
+            <div class="service-grid-item"> One</div> 
+            <div class="service-grid-item">Two</div> 
+            <div class="service-grid-item"> three</div> 
+            <div class="service-grid-item"> Four</div> 
+            <div class="service-grid-item"> Five</div> 
+            <div class="service-grid-item"> Six</div> 
+       </div>
+     </section>
+
       <!-- "reach out " section-->
      <section id="reach-out" class="contact">
         <h2 class="section-title secondary-border">Reach Out</h2> 
